# mbox-extractor

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: stdio.rs
src/: cli.rs  extractor.rs  lib.rs  main.rs
